--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "export NODE_ENV=development && nodemon index.js",
+		"start-dev": "export NODE_ENV=development && nodemon index.js",
 		"start-test": " export NODE_ENV=test && nodemon index.js"
 	},
 	"author": "",
